# Reading-Material-Generation

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  ingest_books.py  package.json  pyproject.toml  render.yaml  reseed_prompts.py  seed_db.py  slide_classifier.py  slide_parser.py  start.sh
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_deck_reading.py  0003_add_source_content.py  0004_schema_fixes.py  0005_book_chunks.py  0006_topic_coverage.py
ppt_agent/: llm.py
ppt_agent/api/: deps.py  export.py  generate.py  main.py  ops.py  review.py  source_content.py
ppt_agent/config/: format_schema.py  settings.py
ppt_agent/db/: models.py  session.py
ppt_agent/evals/: caption_judge.py  promptfoo.yaml  run_regression.py  test_case_generator.py
ppt_agent/image/: pipeline.py
ppt_agent/integrations/: google_slides.py
ppt_agent/memory/: feedback_store.py  generation_store.py  pattern_store.py  prompt_store.py  retrieval.py  types.py
ppt_agent/optimizer/: geval.py  prompt_optimizer.py
ppt_agent/skills/: alignment_validator.py  book_retriever.py  circuit_breaker.py  code_walkthrough.py  concept_explainer.py  cost_tracker.py  deck_compiler.py  diagram_describer.py  figure_caption.py  quiz_generator.py  router.py  seed_prompts.py  shadow.py  topic_coverage_validator.py
ppt_agent/tests/: conftest.py  test_api.py  test_circuit_breaker.py  test_evals.py  test_image_pipeline.py  test_memory.py  test_slide_parser.py
(+11 files in other folders)
